--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Jadoo Travel</title>
 </head>
 
 <body>
-
+    <!-- hero section start -->
+    <div class="hero">
+        <div class="ellipse"></div>
+        <div class="shape">
+            <img src="./assests//images/decore.svg" alt="">
+        </div>
+        <nav></nav>
+    </div>
+    <!-- hero section end -->
 </body>
 
 </html>
