hero shape scroll issue

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 <body>
     <!-- hero section start -->
     <div class="hero">
+        <nav>
+            <img src="./assests//images/logo.svg" alt="">
+        </nav>
         <div class="ellipse"></div>
         <div class="shape">
-            <img src="./assests//images/decore.svg" alt="">
+            <img src="./assests/images/decore.svg" alt="">
         </div>
-        <nav></nav>
     </div>
     <!-- hero section end -->
 </body>
