hero section on progress

--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
     <!-- hero section start -->
     <div class="hero">
         <nav>
-            <img src="./assests//images/logo.svg" alt="">
+            <img src="./assests/images/logo.svg" alt="">
+            <ul>
+                <li><a href="">destinations</a></li>
+                <li><a href="">hotels</a></li>
+                <li><a href="">flights</a></li>
+                <li><a href="">bookings</a></li>
+                <li><a href="">login</a></li>
+                <li><button><a href="">sign up</a></button></li>
+                <select name="language" id="language">
+                    <option value="english">EN</option>
+                    <option value="france">FRN</option>
+                    <option value="germany">GER</option>
+                    <option value="arabic">Arabic</option>
+                </select>
+            </ul>
         </nav>
         <div class="ellipse"></div>
         <div class="shape">
