--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Jadoo Travel</title>
 </head>
 
 <body>
     <!-- hero section start -->
     <div class="hero">
+
         <nav>
-            <img src="./assests/images/logo.svg" alt="">
+            <img class="logo" src="./assests/images/logo.svg" alt="">
             <ul>
                 <li><a href="">destinations</a></li>
                 <li><a href="">hotels</a></li>
@@ -28,6 +31,7 @@
                     <option value="arabic">Arabic</option>
                 </select>
             </ul>
+            <i class="fas fa-bars"></i>
         </nav>
         <div class="ellipse"></div>
         <div class="shape">
@@ -35,6 +39,7 @@
         </div>
     </div>
     <!-- hero section end -->
+
 </body>
 
 </html>
