mobile menu added

--- a/index.html
+++ b/index.html
@@ -31,15 +31,32 @@
                     <option value="arabic">Arabic</option>
                 </select>
             </ul>
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars" id="mobile-menu-button"></i>
+            <i class="fas fa-times" id="menu-close-button"></i>
         </nav>
+        <div id="mobile-menu">
+            <ul>
+                <li><a href="">destinations</a></li>
+                <li><a href="">hotels</a></li>
+                <li><a href="">flights</a></li>
+                <li><a href="">bookings</a></li>
+                <li><a href="">login</a></li>
+                <li><button><a href="">sign up</a></button></li>
+                <select name="language" id="language">
+                    <option value="english">EN</option>
+                    <option value="france">FRN</option>
+                    <option value="germany">GER</option>
+                    <option value="arabic">Arabic</option>
+                </select>
+            </ul>
+        </div>
         <div class="ellipse"></div>
         <div class="shape">
             <img src="./assests/images/decore.svg" alt="">
         </div>
     </div>
     <!-- hero section end -->
-
+    <script src="main.js"></script>
 </body>
 
 </html>
