hero title and image added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
     <!-- hero section start -->
     <div class="hero">
-
         <nav>
             <img class="logo" src="./assests/images/logo.svg" alt="">
             <ul>
@@ -53,6 +52,18 @@
         <div class="ellipse"></div>
         <div class="shape">
             <img src="./assests/images/decore.svg" alt="">
+        </div>
+
+        <div class="hero-content">
+            <div>
+                <h3>Best Destinations around the worlds</h3>
+                <h1>Travel, enjoy <br>
+                    and live a new <br>
+                    and full life</h1>
+            </div>
+            <div>
+                <img src="./assests/images/traveller.png" alt="">
+            </div>
         </div>
     </div>
     <!-- hero section end -->
