hero secttion on process

--- a/index.html
+++ b/index.html
@@ -55,13 +55,20 @@
         </div>
 
         <div class="hero-content">
-            <div>
+            <div class="hero-title-section">
                 <h3>Best Destinations around the worlds</h3>
                 <h1>Travel, enjoy <br>
                     and live a new <br>
-                    and full life</h1>
+                    and full life
+                </h1>
+
+                <p>Built Wicket longer admire do barton vanity itself do in it. Preferred to sportsmen it engrossed
+                    listening. Park gate sell they west hard for the.</p>
+
+                <button><a href="http://#">Find out more</a></button>
+                <i class="fas fa-play"></i>
             </div>
-            <div>
+            <div class="banner-image">
                 <img src="./assests/images/traveller.png" alt="">
             </div>
         </div>
