--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <i class="fas fa-play"></i>
             </div>
             <div class="banner-image">
-                <img src="./assests/images/traveller.png" alt="">
+                <img src="/assests/images/traveller.png" alt="">
             </div>
         </div>
     </div>
