--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/mediaqueries.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Jadoo Travel</title>
@@ -66,12 +67,19 @@
                     listening. Park gate sell they west hard for the.</p>
 
                 <button><a href="http://#">Find out more</a></button>
-                <i class="fas fa-play"></i>
+                <i class="fas fa-play" id="play-video"></i>
             </div>
             <div class="banner-image">
                 <img src="/assests/images/traveller.png" alt="">
             </div>
         </div>
+    </div>
+    <div id="modal">
+        <i class="far fa-window-close" id="close-modal"></i>
+        <iframe src="https://www.youtube.com/embed/gKf9edyIdxQ?autoplay=1&mute=1" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
     </div>
     <!-- hero section end -->
     <script src="main.js"></script>
