service section on prgress

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="">flights</a></li>
                 <li><a href="">bookings</a></li>
                 <li><a href="">login</a></li>
-                <li><button><a href="">sign up</a></button></li>
+                <li><a href=""><button>sign up</button></a></li>
                 <select name="language" id="language">
                     <option value="english">EN</option>
                     <option value="france">FRN</option>
@@ -82,6 +82,37 @@
             allowfullscreen></iframe>
     </div>
     <!-- hero section end -->
+
+    <!-- service section start  -->
+    <div class="service-section">
+        <p class="sub-heading">category</p>
+        <h1>we offer best services</h1>
+        <img class="pluses" src="/assests/images/pluses.svg" alt="">
+        <div class="services">
+
+            <div class="single-service">
+                <img src="/assests//images/category_one.svg" alt="">
+                <h3>calculated weather</h3>
+                <p>Built Wicket longer admire do barton vanity itself do in it.</p>
+            </div>
+            <div class="single-service">
+                <img src="/assests//images/category_two.svg" alt="">
+                <h3>best flight</h3>
+                <p>Engrossed listening. Park gate sell they west hard for the.</p>
+            </div>
+            <div class="single-service">
+                <img src="/assests//images/category_three.svg" alt="">
+                <h3>local events</h3>
+                <p>Built Wicket longer admire do barton vanity itself do in it.</p>
+            </div>
+            <div class="single-service">
+                <img src="/assests//images/category_four.svg" alt="">
+                <h3>customization</h3>
+                <p>Built Wicket longer admire do barton vanity itself do in it.</p>
+            </div>
+        </div>
+    </div>
+    <!-- service section end  -->
     <script src="main.js"></script>
 </body>
 
